[package]
name = "fmx-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fmx-server"
path = "src/main.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.71"
log4rs = "1.2.0"
log = "0.4"
rand = "0.8.5"
chrono = "0.4.26"

[build-dependencies]
tonic-build = "0.9"
